--- a/package.json
+++ b/package.json
@@ -3,19 +3,38 @@
   "version": "1.0.0",
   "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "git@github.com:jrogatis/reduxSampleApp.git",
+  "lint-staged": {
+    "*.js": [
+      "pretty-quick --staged",
+      "npm run fix",
+      "git add"
+    ],
+    "*.json": [
+      "pretty-quick --staged",
+      "git add"
+    ],
+    "*.yml": [
+      "yamllint",
+      "git add"
+    ]
+  },
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "precommit": "lint-staged",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "lint-verbose": "DEBUG=eslint:cli-engine eslint ."
   },
-  "author": "",
+  "author": "Jean Phiilp de Rogatis",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
