--- a/package.json
+++ b/package.json
@@ -13,10 +13,6 @@
     "*.json": [
       "pretty-quick --staged",
       "git add"
-    ],
-    "*.yml": [
-      "yamllint",
-      "git add"
     ]
   },
   "scripts": {
@@ -25,11 +21,14 @@
     "test:watch": "npm run test -- --watch",
     "precommit": "lint-staged",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "lint-verbose": "DEBUG=eslint:cli-engine eslint ."
+    "lint-verbose": "DEBUG=eslint:cli-engine eslint .",
+    "prettier": "npx prettier --config ./.prettierrc --write './**/*.js'"
   },
   "author": "Jean Phiilp de Rogatis",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^6.1.3",
+    "@commitlint/config-conventional": "^6.1.3",
     "babel-core": "^6.2.1",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^6.2.0",
@@ -49,10 +48,13 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.2.1",
+    "husky": "^0.14.3",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
+    "lint-staged": "^7.0.5",
     "mocha": "^2.4.5",
     "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
     "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
