--- a/.prettierrc
+++ b/.prettierrc
@@ -15,6 +15,13 @@
       "options": {
         "parser": "json"
       }
+    },
+     {
+      "files": "*.css",
+      "options": {
+        "parser": "css"
+      }
     }
+    
   ]
 }
